refactor(InputParserTest): 입력 데이터를 파일로 관리하도록 수정