@@ -9,18 +9,13 @@ class InputParserTest {
 
     InputParser inputParser = new InputParser();
 
-    static final String INPUT_WITHOUT_DELIMITER1 = "1,2,3,4";
-    static final String INPUT_WITHOUT_DELIMITER2 = "1:2:3:4";
-    static final String INPUT_WITHOUT_DELIMITER3 = "1,2:3,4";
-    static final String INPUT_WITHOUT_DELIMITER4 = "1:2,3:4";
-
     @Test
     void 기본_입력() {
         //given, when
-        List<Long> numberList1 = inputParser.parse(INPUT_WITHOUT_DELIMITER1);
-        List<Long> numberList2 = inputParser.parse(INPUT_WITHOUT_DELIMITER2);
-        List<Long> numberList3 = inputParser.parse(INPUT_WITHOUT_DELIMITER3);
-        List<Long> numberList4 = inputParser.parse(INPUT_WITHOUT_DELIMITER4);
+        List<Long> numberList1 = inputParser.parse(InputData.INPUT_WITHOUT_DELIMITER1);
+        List<Long> numberList2 = inputParser.parse(InputData.INPUT_WITHOUT_DELIMITER2);
+        List<Long> numberList3 = inputParser.parse(InputData.INPUT_WITHOUT_DELIMITER3);
+        List<Long> numberList4 = inputParser.parse(InputData.INPUT_WITHOUT_DELIMITER4);
 
         //then
         Assertions.assertThat(numberList1).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
@@ -29,77 +24,61 @@ class InputParserTest {
         Assertions.assertThat(numberList4).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
     }
 
-    static final String WRONG_INPUT_WITHOUT_DELIMITER1 = "1,2^3,4";
-    static final String WRONG_INPUT_WITHOUT_DELIMITER2 = "1^2^3^4";
-    static final String WRONG_INPUT_WITHOUT_DELIMITER3 = "a,2,3,4";
-    static final String WRONG_INPUT_WITHOUT_DELIMITER4 = "-1:2,3:4";
-
     @Test
     void 기본_입력_예외() {
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITHOUT_DELIMITER1))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITHOUT_DELIMITER1))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITHOUT_DELIMITER2))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITHOUT_DELIMITER2))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITHOUT_DELIMITER3))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITHOUT_DELIMITER3))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITHOUT_DELIMITER4))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITHOUT_DELIMITER4))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.NEGATIVE_NUMBER_ERROR);
     }
-
-    static final String INPUT_WITH_DELIMITER1 = "//;\\n1;2;3;4";
-    static final String INPUT_WITH_DELIMITER2 = "//;\\n1;2,3:4";
-    static final String INPUT_WITH_DELIMITER3 = "//;^\\n1;2^3:4";
-    static final String INPUT_WITH_DELIMITER4 = "//;^\\n1;2^3,4";
-    static final String INPUT_WITH_DELIMITER5 = "//;\\n1";
 
     @Test
     void 커스텀_구분자_입력() {
 
         //given, when
-        List<Long> numberList1 = inputParser.parse(INPUT_WITH_DELIMITER1);
-        List<Long> numberList2 = inputParser.parse(INPUT_WITH_DELIMITER2);
-        List<Long> numberList3 = inputParser.parse(INPUT_WITH_DELIMITER3);
-        List<Long> numberList4 = inputParser.parse(INPUT_WITH_DELIMITER4);
-        List<Long> numberList5 = inputParser.parse(INPUT_WITH_DELIMITER5);
+        List<Long> numberList1 = inputParser.parse(InputData.INPUT_WITH_DELIMITER1);
+        List<Long> numberList2 = inputParser.parse(InputData.INPUT_WITH_DELIMITER2);
+        List<Long> numberList3 = inputParser.parse(InputData.INPUT_WITH_DELIMITER3);
+        List<Long> numberList4 = inputParser.parse(InputData.INPUT_WITH_DELIMITER4);
+        List<Long> numberList5 = inputParser.parse(InputData.INPUT_WITH_DELIMITER5);
 
         //then
         Assertions.assertThat(numberList1).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
         Assertions.assertThat(numberList2).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
         Assertions.assertThat(numberList3).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
         Assertions.assertThat(numberList4).isEqualTo(Arrays.asList(1L, 2L, 3L, 4L));
-        Assertions.assertThat(numberList5).isEqualTo(Arrays.asList(1L));
+        Assertions.assertThat(numberList5).isEqualTo(List.of(1L));
 
     }
-
-    static final String WRONG_INPUT_WITH_DELIMITER1 = "//;\\n1^2^3^4";
-    static final String WRONG_INPUT_WITH_DELIMITER2 = "//;\\n1;2&3^4";
-    static final String WRONG_INPUT_WITH_DELIMITER3 = "//;^\\na;2;3;4";
-    static final String WRONG_INPUT_WITH_DELIMITER4 = "//;^\\n-1;2;3;4";
 
     @Test
     void 커스텀_구분자_입력_예외() {
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITH_DELIMITER1))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITH_DELIMITER1))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITH_DELIMITER2))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITH_DELIMITER2))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITH_DELIMITER3))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITH_DELIMITER3))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.INVALID_LETTER_ERROR);
 
-        Assertions.assertThatThrownBy(() -> inputParser.parse(WRONG_INPUT_WITH_DELIMITER4))
+        Assertions.assertThatThrownBy(() -> inputParser.parse(InputData.WRONG_INPUT_WITH_DELIMITER4))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage(ErrorMessage.NEGATIVE_NUMBER_ERROR);
     }
